--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #1E1E1E;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -24,7 +26,7 @@
 }
 
 .App-Tabs {
-  margin: 30px;
+  /* margin: 30px; */
 }
 
 @keyframes App-logo-spin {
